# ax_toy_project_2_sql_supporter

./: .gitignore  CLAUDE.md  DB_GUIDE.md  DB_SETUP_COMPLETE.md  QUICK_START.md  README.md  css.py  data_migration.db  fund_analysis.sql  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
modules/: db_manager.py  sample_data.py
modules/agents/: link_injector_adaptive.py  link_injector_simple.py  table_extractor.py
modules/db/: manager.py
modules/page_1/: funcs.py  link_injector.py
modules/page_2/: funcs.py  link_injector.py  table_extractor.py
modules/page_3/: CLAUDE.md  INTEGRATION_EXAMPLE.md  sql_executor.py  sql_generator.py  table_extractor.py  table_extractor_reAct_slow.py
modules/sql/: generator.py
modules/validation/: link_validator.py
pages/: page_1.py  page_2.py  page_3.py  page_4.py
style/: page_3.py  page_4.py
