[project]
name = "sql-migration-tool"
version = "0.1.0"
description = "LLM-based SQL generation and execution tool for portfolio data migration"
authors = [{name = "Jun", email = "whitesky118@gmail.com"}]
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.28",
    "openai>=1.0",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "langsmith>=0.1",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipython",
    "jupyter-client",
]
